--- a/PCB/T962a_Panel/Project Outputs for T962a_Panel/Design Rule Check - T962a_Panel.html
+++ b/PCB/T962a_Panel/Project Outputs for T962a_Panel/Design Rule Check - T962a_Panel.html
@@ -230,22 +230,22 @@
 <tr class="front_matter">
 <td class="front_matter_column1">Date</td>
 <td class="front_matter_column2">:</td>
-<td class="front_matter_column3">17/09/2016</td>
+<td class="front_matter_column3">5/10/2016</td>
 </tr>
 <tr class="front_matter">
 <td class="front_matter_column1">Time</td>
 <td class="front_matter_column2">:</td>
-<td class="front_matter_column3">12:00:37 PM</td>
+<td class="front_matter_column3">1:48:50 AM</td>
 </tr>
 <tr class="front_matter">
 <td class="front_matter_column1">Elapsed Time</td>
 <td class="front_matter_column2">:</td>
-<td class="front_matter_column3">00:00:00</td>
+<td class="front_matter_column3">00:00:01</td>
 </tr>
 <tr class="front_matter">
 <td class="front_matter_column1">Filename</td>
 <td class="front_matter_column2">:</td>
-<td class="front_matter_column3"><a href="file:///C:\Users\podonoghue\Documents\Development\PCB\T962a_Panel\T962a_Panel.PcbDoc" class="file"><acronym title="C:\Users\podonoghue\Documents\Development\PCB\T962a_Panel\T962a_Panel.PcbDoc">C:\Users\podonoghue\Documents\Development\PCB\T962a_Panel\T962a_Panel.PcbDoc</acronym></a></td>
+<td class="front_matter_column3"><a href="file:///C:\Users\podonoghue\Documents\Development\T962a_Oven_Controller\PCB\T962a_Panel\T962a_Panel.PcbDoc" class="file"><acronym title="C:\Users\podonoghue\Documents\Development\T962a_Oven_Controller\PCB\T962a_Panel\T962a_Panel.PcbDoc">C:\Users\podonoghue\Documents\Development\T962a_Oven_Controller\PCB\T962a_Panel\T962a_Panel.PcbDoc</acronym></a></td>
 </tr>
 </table>
 </td>
@@ -258,11 +258,11 @@
 <tr>
 <td class="DRC_summary_header_col1">Rule Violations</td>
 <td class="DRC_summary_header_col2">:</td>
-<td class="DRC_summary_header_col3" style="color : red">3</td></tr>
+<td class="DRC_summary_header_col3">0</td></tr>
 </table>
 </td>
 </table>
-<hr><a name="IDZPONFKFOCFJWCB4WXESYEN5XTELKILU3U5AJFIC2TAJLXZ5UTJ2N"><h2>Summary</h2></a><table>
+<hr><a name="IDXN5EPZA4NXABKPWYTZFLYDCMUEJU4JPRSDB2OTF2G5UYVRCRF3J"><h2>Summary</h2></a><table>
 <tr>
 <th class="column1">Warnings</th>
 <th class="column2">Count</th>
@@ -277,85 +277,73 @@
 <th class="column2">Count</th>
 </tr>
 <tr class="onmouseout_odd" onmouseover="className = 'onmouseover_odd'" onmouseout="className = 'onmouseout_odd'">
-<td class="column1"><a href="#ID5OOMYRWK1J4LMZMJDTBFA3S1KDLAODTSP1TYMGEKHYJ2CUUYUJFH">Power Plane Connect Rule(Direct Connect )(Expansion=0.508mm) (Conductor Width=0.254mm) (Air Gap=0.254mm) (Entries=4) (IsVia)</a></td>
+<td class="column1"><a href="#ID2SMJ0NC2BVUSWZNZTWWPFACNIQGYGH5OYS4TAPR5KCK3ZWBV3NB">Power Plane Connect Rule(Direct Connect )(Expansion=0.508mm) (Conductor Width=0.254mm) (Air Gap=0.254mm) (Entries=4) (IsVia)</a></td>
 <td class="column2">0</td>
 </tr>
 <tr class="onmouseout_even" onmouseover="className = 'onmouseover_even'" onmouseout="className = 'onmouseout_even'">
-<td class="column1"><a href="#IDYNKALZTJ1GK2M53Q4H20MQVV0PXV5AOHRQ5H5ACX1N5N4DQ2GVXI">Room T962a_Panel (Bounding Region = (23.303mm, 8.41mm, 90.486mm, 37.366mm) (InComponentClass('T962a_Panel'))</a></td>
+<td class="column1"><a href="#IDDF00RF2JL0NXIYPWCI3F3XVYEBABKVYA25DC1PJLDWE4NSWQSLNP">Room T962a_Panel (Bounding Region = (23.303mm, 4.854mm, 90.486mm, 36.858mm) (InComponentClass('T962a_Panel'))</a></td>
 <td class="column2">0</td>
 </tr>
 <tr class="onmouseout_odd" onmouseover="className = 'onmouseover_odd'" onmouseout="className = 'onmouseout_odd'">
-<td class="column1"><a href="#IDSGA45LF2WOVBGDU13EPJTH3KGJEAFIYLOYC5ETMUO1E3WMTCBJQK">Modified Polygon (Allow modified: No), (Allow shelved: No)</a></td>
+<td class="column1"><a href="#ID1S04IMJVVGAHP3T2GHCWND33B2DVSTNU2BLNNGUQG3XM1WGVDQH">Modified Polygon (Allow modified: No), (Allow shelved: No)</a></td>
 <td class="column2">0</td>
 </tr>
 <tr class="onmouseout_even" onmouseover="className = 'onmouseover_even'" onmouseout="className = 'onmouseout_even'">
-<td class="column1"><a href="#IDGP4VYRRSVVCFB3MKF0Z1KSLYLBJKKRTHP0R321FVHQVTHCBMGLNH">Net Antennae (Tolerance=0mm) (All)</a></td>
+<td class="column1"><a href="#IDBGMKYO31TXKJMBHUP3D2QOFKYG42RMTNP5FLWIO2TOKBLFQMO4XL">Net Antennae (Tolerance=0mm) (All)</a></td>
 <td class="column2">0</td>
 </tr>
 <tr class="onmouseout_odd" onmouseover="className = 'onmouseover_odd'" onmouseout="className = 'onmouseout_odd'">
-<td class="column1"><a href="#IDQIVXRKNMFNVKNKJCT22XTAUJBESTQWEMYTHCWREREH2KHTVTXC5M">Silk primitive without silk layer</a></td>
-<td class="column2">3</td>
+<td class="column1"><a href="#IDBF4ITW0BOX35OMNJYNPAOH3MGCA5AY2DGS453NEGTR1ISLB4DOTK">Silk primitive without silk layer</a></td>
+<td class="column2">0</td>
 </tr>
 <tr class="onmouseout_even" onmouseover="className = 'onmouseover_even'" onmouseout="className = 'onmouseout_even'">
-<td class="column1"><a href="#IDWE41QWZDNJAPOLR0SDMOQROAOEU2HTDNPN2CZ2G40HFHT1YALSUB">Silk to Silk (Clearance=0.254mm) (All),(All)</a></td>
+<td class="column1"><a href="#ID4INQBP0L2CXOPFEGOH4Y5AB15E54RFJQKXAG4BOYQU0Q0OT0KSQO">Silk to Silk (Clearance=0.254mm) (All),(All)</a></td>
 <td class="column2">0</td>
 </tr>
 <tr class="onmouseout_odd" onmouseover="className = 'onmouseover_odd'" onmouseout="className = 'onmouseout_odd'">
-<td class="column1"><a href="#IDRZ11TRANAK2DIHY2BJVMMCT4ZB4VAKCJXYV2RQDPO2JA5WK1T5XJ">Silk To Solder Mask (Clearance=0.127mm) (IsPad),(All)</a></td>
+<td class="column1"><a href="#IDCNT50VMEXIPAPO4JQPRZJILUUBAS3BLRSGHKBTE3GSBKAA0NOTWD">Silk To Solder Mask (Clearance=0.127mm) (IsPad),(All)</a></td>
 <td class="column2">0</td>
 </tr>
 <tr class="onmouseout_even" onmouseover="className = 'onmouseover_even'" onmouseout="className = 'onmouseout_even'">
-<td class="column1"><a href="#IDBWC5KFUHWAFAPQB051UYNI1R5BK2K3YUJIGZOPORCNHONPX2XBKN">Minimum Solder Mask Sliver (Gap=0.254mm) (All),(All)</a></td>
+<td class="column1"><a href="#ID1HGOYCR1XPUKHTNOUSSUVFV3BFBHYORNSET4MFOIF2RHEMZATGIE">Minimum Solder Mask Sliver (Gap=0.254mm) (All),(All)</a></td>
 <td class="column2">0</td>
 </tr>
 <tr class="onmouseout_odd" onmouseover="className = 'onmouseover_odd'" onmouseout="className = 'onmouseout_odd'">
-<td class="column1"><a href="#IDPR4FAFXY1SSLOXHY5JN05ZFW3OQAGJ5MEPDJ02KNHJCENOC4VPTI">Hole To Hole Clearance (Gap=0.254mm) (All),(All)</a></td>
+<td class="column1"><a href="#IDRDBDD1Y0NHE0G4UGXTNUKMPEJBILXFZUS21TWRD0BHPYOZRFVETF">Hole To Hole Clearance (Gap=0.254mm) (All),(All)</a></td>
 <td class="column2">0</td>
 </tr>
 <tr class="onmouseout_even" onmouseover="className = 'onmouseover_even'" onmouseout="className = 'onmouseout_even'">
-<td class="column1"><a href="#ID35LQAXSEG21JOBNRVWV0RUOUOJKUKHFKZGT0LQHNPY1P0DCJVZSC">Hole Size Constraint (Min=0.025mm) (Max=8.89mm) (All)</a></td>
+<td class="column1"><a href="#IDNUFQ0DILOV1OGY4AGHETYEEH2KLNC4B2PN31FIDG0X3OFWPOQAEF">Hole Size Constraint (Min=0.025mm) (Max=8.89mm) (All)</a></td>
 <td class="column2">0</td>
 </tr>
 <tr class="onmouseout_odd" onmouseover="className = 'onmouseover_odd'" onmouseout="className = 'onmouseout_odd'">
-<td class="column1"><a href="#IDMXUN4GYBRRK1DPH0LQEKTBWT2O41WJXAJS0BWXO2GCWOVIJRRIDC">Height Constraint (Min=0mm) (Max=25.4mm) (Prefered=12.7mm) (All)</a></td>
+<td class="column1"><a href="#ID1ER4FVDBAKGUI1YLGKEQUTA0FKFFTADP0QNHNYMVRXPKIYCP4RWP">Height Constraint (Min=0mm) (Max=25.4mm) (Prefered=12.7mm) (All)</a></td>
 <td class="column2">0</td>
 </tr>
 <tr class="onmouseout_even" onmouseover="className = 'onmouseover_even'" onmouseout="className = 'onmouseout_even'">
-<td class="column1"><a href="#ID01LTOWQWDGW0PNWD300STJP1YC0QWSQ4FFNPEG3LWUXK0YKQ1LE">Width Constraint (Min=0.254mm) (Max=1.016mm) (Preferred=0.254mm) (All)</a></td>
+<td class="column1"><a href="#IDNSKAHI2OPO1CQX5MKNVLQ14VIQIX0WEZ0FQBSMKENM2TZ1WBE3I">Width Constraint (Min=0.254mm) (Max=1.016mm) (Preferred=0.254mm) (All)</a></td>
 <td class="column2">0</td>
 </tr>
 <tr class="onmouseout_odd" onmouseover="className = 'onmouseover_odd'" onmouseout="className = 'onmouseout_odd'">
-<td class="column1"><a href="#IDYF3XHSWMLP5CC1WXHCMGWQ1V3PZMLENI4G5Q0YKX1HEKMOXABEAB">Power Plane Connect Rule(Relief Connect )(Expansion=0.508mm) (Conductor Width=0.254mm) (Air Gap=0.254mm) (Entries=4) (All)</a></td>
+<td class="column1"><a href="#IDT4DXFM2G4OJZGGQ52CFLZGCVVHJGH124T20CPSC1UL3POTR0VZM">Power Plane Connect Rule(Relief Connect )(Expansion=0.508mm) (Conductor Width=0.254mm) (Air Gap=0.254mm) (Entries=4) (All)</a></td>
 <td class="column2">0</td>
 </tr>
 <tr class="onmouseout_even" onmouseover="className = 'onmouseover_even'" onmouseout="className = 'onmouseout_even'">
-<td class="column1"><a href="#IDNHYCULH2NYSRG0AYZIXGDCO4YFAEGJV0STZHZPDE1TC45GNKY3SL">Clearance Constraint (Gap=0.152mm) (All),(All)</a></td>
+<td class="column1"><a href="#IDAJY2XRQFLPKHMNOYMBAV0ROAZN1GQOTAKCSLCVDMAEGQEXMV4ZPH">Clearance Constraint (Gap=0.152mm) (All),(All)</a></td>
 <td class="column2">0</td>
 </tr>
 <tr class="onmouseout_odd" onmouseover="className = 'onmouseover_odd'" onmouseout="className = 'onmouseout_odd'">
-<td class="column1"><a href="#IDBQQMNZSKREE0KPATO5FFOJP1GHWTSQJNE0FW40HPKI5VYAP05JBB">Un-Routed Net Constraint ( (All) )</a></td>
+<td class="column1"><a href="#IDSDLWMS45BR51ESD5FBXUPRNVRH4BSTLB0F4DIYJSRX024YSB4ZZF">Un-Routed Net Constraint ( (All) )</a></td>
 <td class="column2">0</td>
 </tr>
 <tr class="onmouseout_even" onmouseover="className = 'onmouseover_even'" onmouseout="className = 'onmouseout_even'">
-<td class="column1"><a href="#IDTUIPLALPT3OTDKZK53GNWUIHZO4JBM2L4VWMTRND1TUMX03YKHCO">Short-Circuit Constraint (Allowed=No) (All),(All)</a></td>
+<td class="column1"><a href="#ID5W2LQGAJYWXGNKSB5FRNM3FJCJ3WQ13STBHNYGBMUBLIXX5HQMBB">Short-Circuit Constraint (Allowed=No) (All),(All)</a></td>
 <td class="column2">0</td>
 </tr>
 <tr>
 <td style="font-weight : bold; text-align : right" class="column1">Total</td>
-<td style="font-weight : bold" class="column2">3</td>
+<td style="font-weight : bold" class="column2">0</td>
 </tr>
-</table><br><hr><a name="IDQIVXRKNMFNVKNKJCT22XTAUJBESTQWEMYTHCWREREH2KHTVTXC5M"><table>
-<tr>
-<th style="text-align : left" colspan="1" class="rule">Silk primitive without silk layer</th>
-</tr>
-<tr class="onmouseout_odd" onmouseover="className = 'onmouseover_odd'" onmouseout="className = 'onmouseout_odd'">
-<td class="column1"><a href="dxpprocess://PCB:Zoom?document=C:\Users\podonoghue\Documents\Development\PCB\T962a_Panel\T962a_Panel.PcbDoc;viewname=PCBEditor;Action=AREA_DYNAMICZOOM|Location1.X=1305.165mil|Location2.X=1655.921mil|Location1.Y=1253.551mil|Location2.Y=1575.977mil|Absolute=True" class="callback"><acronym title="dxpprocess://PCB:Zoom?document=C:\Users\podonoghue\Documents\Development\PCB\T962a_Panel\T962a_Panel.PcbDoc;viewname=PCBEditor;Action=AREA_DYNAMICZOOM|Location1.X=1305.165mil|Location2.X=1655.921mil|Location1.Y=1253.551mil|Location2.Y=1575.977mil|Absolute=True">Silk To Board Region Clearance (Out of silkscreen region) : Track (-44.02mm,5.935mm)(-31.98mm,5.935mm)  Top Overlay</acronym></a><br></td>
-</tr>
-<tr class="onmouseout_even" onmouseover="className = 'onmouseover_even'" onmouseout="className = 'onmouseout_even'">
-<td class="column1"><a href="dxpprocess://PCB:Zoom?document=C:\Users\podonoghue\Documents\Development\PCB\T962a_Panel\T962a_Panel.PcbDoc;viewname=PCBEditor;Action=AREA_DYNAMICZOOM|Location1.X=2029.443mil|Location2.X=2502.509mil|Location1.Y=1187.081mil|Location2.Y=1631.817mil|Absolute=True" class="callback"><acronym title="dxpprocess://PCB:Zoom?document=C:\Users\podonoghue\Documents\Development\PCB\T962a_Panel\T962a_Panel.PcbDoc;viewname=PCBEditor;Action=AREA_DYNAMICZOOM|Location1.X=2029.443mil|Location2.X=2502.509mil|Location1.Y=1187.081mil|Location2.Y=1631.817mil|Absolute=True">Silk To Board Region Clearance (Out of silkscreen region) : Track (-26.3mm,5.8mm)(-9.8mm,5.8mm)  Top Overlay</acronym></a><br></td>
-</tr>
-<tr class="onmouseout_odd" onmouseover="className = 'onmouseover_odd'" onmouseout="className = 'onmouseout_odd'">
-<td class="column1"><a href="dxpprocess://PCB:Zoom?document=C:\Users\podonoghue\Documents\Development\PCB\T962a_Panel\T962a_Panel.PcbDoc;viewname=PCBEditor;Action=AREA_DYNAMICZOOM|Location1.X=2738.104mil|Location2.X=3211.171mil|Location1.Y=1187.081mil|Location2.Y=1631.817mil|Absolute=True" class="callback"><acronym title="dxpprocess://PCB:Zoom?document=C:\Users\podonoghue\Documents\Development\PCB\T962a_Panel\T962a_Panel.PcbDoc;viewname=PCBEditor;Action=AREA_DYNAMICZOOM|Location1.X=2738.104mil|Location2.X=3211.171mil|Location1.Y=1187.081mil|Location2.Y=1631.817mil|Absolute=True">Silk To Board Region Clearance (Out of silkscreen region) : Track (-8.3mm,5.8mm)(8.2mm,5.8mm)  Top Overlay</acronym></a><br></td>
-</tr>
-</table></a><a href="#top">Back to top</a><br><br></body>
+</table><br><hr>
+</body>
 </html>
